--- a/composer.json
+++ b/composer.json
@@ -17,45 +17,71 @@
         }
     },
     "require": {
-        "php": ">=5.5.9",
-        "symfony/symfony": "3.1.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "symfony/swiftmailer-bundle": "^2.3",
-        "symfony/monolog-bundle": "^2.8",
-        "symfony/polyfill-apcu": "^1.0",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "php": ">=8.0",
+        "doctrine/orm": "^2.12.2",
+        "doctrine/doctrine-bundle": "^2.6.3",
+        "symfony/monolog-bundle": "^3.8.0",
+        "symfony/polyfill-apcu": "^1.25.0",
+        "incenteev/composer-parameter-handler": "^2.1.4",
+        "symfony/flex": "^2.1",
+        "sensio/framework-extra-bundle": "^6.1",
+        "symfony/asset": "6.0.*",
+        "symfony/doctrine-messenger": "6.0.*",
+        "symfony/expression-language": "6.0.*",
+        "symfony/form": "6.0.*",
+        "symfony/http-client": "6.0.*",
+        "symfony/intl": "6.0.*",
+        "symfony/mailer": "6.0.*",
+        "symfony/mime": "6.0.*",
+        "symfony/notifier": "6.0.*",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "symfony/proxy-manager-bridge": "6.0.*",
+        "symfony/process": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
+        "doctrine/annotations": "^1.0",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.5",
+        "symfony/property-access": "6.0.*",
+        "symfony/property-info": "6.0.*",
+        "symfony/serializer": "6.0.*",
+        "symfony/string": "6.0.*",
+        "symfony/translation": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
+        "symfony/validator": "6.0.*",
+        "symfony/web-link": "6.0.*",
+        "symfony/webapp-meta": "^1.0",
+        "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/cache": "6.0.*",
+        "symfony/maker-bundle": "^1.42"
     },
     "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^6.1.0-BETA1",
+        "symfony/debug-bundle": "6.0.*",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     },
     "scripts": {
         "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ],
         "post-install-cmd": [
             "@symfony-scripts"
         ],
         "post-update-cmd": [
             "@symfony-scripts"
-        ]
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        }
     },
     "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
+        "symfony": {
+            "allow-contrib": false,
+            "require": "6.0.*"
+        },
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
