--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
 /vendor/
-/web/bundles/
+/web/bundles
+.idea
+
 
 ###> symfony/framework-bundle ###
 /.env.local
