--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,6 +34,7 @@
             <file>src/Kernel.php</file>
             <directory>src/DataFixtures</directory>
             <directory>src/Exception</directory>
+            <directory>src/Data</directory>
         </exclude>
     </coverage>
 
