--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.5",
         "sensio/framework-extra-bundle": "^6.1",
+        "squizlabs/php_codesniffer": "^3.6",
         "symfony/asset": "6.0.*",
         "symfony/cache": "6.0.*",
         "symfony/config": "6.0.*",
