--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: php
 php:
   - '8.1.0'
-script:
+
+services:
+  - mysql
+
+before_script:
   - composer install
+  - php bin/console doctrine:database:create --env=test
+  - php bin/console doctrine:schema:create --env=test
+  - php bin/console doctrine:fixtures:load -n --env=test
+
+script:
   - php bin/phpunit
