--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
 
 before_script:
   - composer install
+  - php bin/console doctrine:database:create --env=test
+  - php bin/console doctrine:schema:create --force --env=test
+  - php bin/console doctrine:fixtures:load -n --env=test
 
 script:
   - php bin/phpunit
