--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ before_script:
   - composer install
 
 script:
-  - php bin/phpunit tests/Entity
+  - php bin/phpunit
+  - php bin/phpunit tests/Entity/TaskTest.php
+  - php bin/phpunit tests/Controller/DefaultControllerTest.php
