--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
   - composer install
 
 script:
-  - php bin/phpunit
+  - php bin/phpunit tests/Security/SecurityController.php
   - php bin/phpunit tests/Entity/TaskTest.php
+  - php bin/phpunit tests/Entity/UserTest.php
+  - php bin/phpunit tests/Entity/TaskValidatorTest.php
   - php bin/phpunit tests/Controller/DefaultControllerTest.php
