--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,6 +22,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\EventListener\TaskPersistListener:
-        tags:
-            - { name: doctrine.event_listener, event: prePersist }
+    # App\EventListener\TaskPersistListener:
+        # tags:
+            # - { name: doctrine.event_listener, event: prePersist }
