--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": ">=8.0",
         "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12.2",
         "liip/test-fixtures-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
